--- a/client/src/styles/category.css
+++ b/client/src/styles/category.css
@@ -44,3 +44,21 @@
     border: 1px solid #ccc;
     cursor: pointer;
   }
+
+  .avatar_reply{
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.25rem;
+  }
+  
+  .avatar_reply img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  .avatar_reply .reply-text{
+    display: block;
+    opacity: 0.5;
+    font-size: 11px;
+  }
